ECPINT-2411: apm refactor - boleto + update cko sdk

--- a/woocommerce-gateway-checkout-com/includes/lib/checkout-sdk-php/src/config.ini
+++ b/woocommerce-gateway-checkout-com/includes/lib/checkout-sdk-php/src/config.ini
@@ -52,7 +52,7 @@ public_key =
 ;CURLOPT_CONNECTTIMEOUT = 60
 ;CURLOPT_RETURNTRANSFER = true
 ;CURLOPT_FAILONERROR    = false                    ;; This forces cURL to catch the response of 4XX erros
-CURLOPT_SSL_VERIFYPEER = false
+;CURLOPT_SSL_VERIFYPEER = true
 
 
 [http]
