ECPINT-2411: update checkout sdk

--- a/woocommerce-gateway-checkout-com/includes/lib/checkout-sdk-php/composer.json
+++ b/woocommerce-gateway-checkout-com/includes/lib/checkout-sdk-php/composer.json
@@ -5,20 +5,7 @@
     "version": "1.0.14",
     "type": "library",
     "license": "MIT",
-    "keywords": [
-        "checkout.com",
-        "payment",
-        "gateway",
-        "checkout",
-        "checkoutcom",
-        "GW3",
-        "CKO",
-        "Reboot",
-        "SDK",
-        "Library",
-        "PHP",
-        "API"
-    ],
+    "keywords": ["checkout.com","payment","gateway","checkout","checkoutcom","GW3","CKO", "Reboot", "SDK", "Library", "PHP", "API"],
     "authors": [
         {
             "name": "Checkout.com",
