--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     },
     "require": {
         "php": ">=7.3",
-        "checkout/checkout-sdk-php": "3.0.20"
+        "checkout/checkout-sdk-php": "3.0.*"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.6",
