Consolidate documentation: Merge 22 files into 3 organized guides
- Created TROUBLESHOOTING.md: Consolidates AWS fixes, Flow issues, gateway availability, and deployment verification (15 files merged)
- Created FIXES_AND_CHANGELOG.md: Consolidates all fix documentation and version history (5 files merged)
- Created LOGGING.md: Consolidates logging strategy and improvements (2 files merged)
- Created DOCUMENTATION_STRUCTURE.md: Documentation index and quick reference
- Updated .gitignore: Added all old documentation files to prevent committing temporary analysis files

Result: 30+ files reduced to 8 core documentation files (73% reduction)
All old files preserved locally but excluded from git tracking

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ checkout-com-unified-payments-api-backup-*/
 diagnose-flow-*.php
 terms-and-conditions-checkbox.php
 
-# Analysis and documentation files (temporary)
+# Analysis and documentation files (temporary - now consolidated)
 DIAGNOSTIC_FINDINGS.md
 FLOW_DESIGN_ANALYSIS.md
 FLOW_DISAPPEARING_ANALYSIS.md
@@ -25,7 +25,21 @@ VERIFY_DEPLOYMENT.md
 VERIFY_SERVER_FILE.md
 WHAT_TO_CHECK.md
 CHANGES_SUMMARY.md
+COMMIT_SUMMARY.md
 PRE_PUSH_CHECKLIST.md
+DOCUMENTATION_CONSOLIDATION_PLAN.md
+# Old fix documentation (now in FIXES_AND_CHANGELOG.md)
+CARD_SAVING_FIX_2025-10-13.md
+SAVED_CARDS_FIX_V2_CHANGES.md
+SAVED_CARDS_UPGRADE_SOLUTION.md
+WEBHOOK_ORDER_LOOKUP_FIX.md
+MIGRATION_NOT_NEEDED.md
+# Old logging docs (now in LOGGING.md)
+LOGGING_IMPROVEMENTS.md
+LOGGING_STRATEGY.md
+# Old AWS docs (now in TROUBLESHOOTING.md)
+AWS-FIX-INSTRUCTIONS.md
+AWS-WELL-KNOWN-TROUBLESHOOTING.md
 
 # Test files (if not part of repo)
 tests/
