Remove Docker files from repository and add to .gitignore
- Remove Docker setup files from git tracking (keep locally for development)
- Add Docker files to .gitignore to prevent future commits

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@ node_modules/
 vendor/
 checkout-com-unified-payments-api.zip
 composer.phar
+
+# Docker files (local development only)
+.dockerignore
+docker-compose.yml
+docker-php.ini
+docker-start.sh
