Update .gitignore to allow zip files in releases directory

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,8 @@ composer.phar
 docker-compose.yml
 docker-php.ini
 docker-start.sh
+
+# Allow releases directory (but ignore other files in releases/)
+!releases/
+releases/*
+!releases/*.zip
