Refactor/reduce complexity v2 (#402)
* WIP: Refactor reduce complexity v2 - local changes

* Remove backups folder from repository

* Remove all markdown documentation files

* Fix: Production-ready improvements and critical fixes

- Fix workflow region validation to prevent invalid API URLs
- Add input sanitization for region settings
- Early load utility class to fix critical error on plugin activation
- Wrap debug error_log statements in WP_DEBUG checks
- Remove unnecessary debug logging from wrapper functions
- Regenerate composer autoloader without dev dependencies
- Restore README.md and languages/README.md files
- Improve production readiness and WordPress coding standards compliance

* Fix: Prevent invalid public key error during key registration

- Add validation to check API keys before SDK initialization
- Gracefully handle empty keys during initial setup/registration
- Only log SDK initialization failures when WP_DEBUG is enabled
- Fix region subdomain validation to handle 'global' value
- Use null coalescing operator for safer array access

* Fix: PayPal Express webhook matching for order status updates

- Update Flow webhook handler Method 3 to check both _cko_flow_payment_id and _cko_payment_id meta keys
- Add immediate order save after PayPal Express payment ID is set (before status update)
- Process pending webhooks after payment ID is saved to handle race conditions
- Update payment ID validation to check both meta keys for compatibility
- Fixes issue where PayPal Express orders (using _cko_payment_id) were not found by webhook handler
- Ensures webhooks can match orders regardless of payment method type

* Fix payment method title spacing and improve webhook/flow integration

- Fix payment method title spacing issues on checkout page for both newer and older WooCommerce versions
- Add higher specificity CSS rules to override theme styles
- Move Terms Checkbox Guard setting to Advanced → Debug Settings
- Improve webhook/workflow duplicate detection

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,15 @@ node_modules/
 **/**.mp4
 vendor/
 checkout-com-unified-payments-api.zip
+composer.phar
+
+# Docker files (local development only)
+.dockerignore
+docker-compose.yml
+docker-php.ini
+docker-start.sh
+
+# Allow releases directory (but ignore other files in releases/)
+!releases/
+releases/*
+!releases/*.zip
